compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__functions__function_call_incorrect_arity_fault_tolerance.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "\nfn add(x: Int, y: Int) {\n  x + y\n}\n\npub fn main() {\n  add(1.0)\n}\n"
---
----- SOURCE CODE

fn add(x: Int, y: Int) {
  x + y
}

pub fn main() {
  add(1.0)
}


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.rakun:7:3
  │
7 │   add(1.0)
  │   ^^^^^^^^ Expected 2 arguments, got 1


error: Type mismatch
  ┌─ /src/one/two.rakun:7:7
  │
7 │   add(1.0)
  │       ^^^

Expected type:

    Int

Found type:

    Float
