compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__functions__multiple_bad_statement_assignment_with_pattern_fault_tolerance2.snap
---
source: compiler-core/src/type_/tests/functions.rs
assertion_line: 293
expression: "\npub fn main() {\n  // Since the pattern is invalid no variable is created\n  let Junk(a) = 7\n  // Pattern is valid but does not type check\n  let Ok(b) = 1\n  let c = a + b\n}\n"
---
----- SOURCE CODE

pub fn main() {
  // Since the pattern is invalid no variable is created
  let Junk(a) = 7
  // Pattern is valid but does not type check
  let Ok(b) = 1
  let c = a + b
}


----- ERROR
error: Unknown variable
  ┌─ /src/one/two.rakun:4:7
  │
4 │   let Junk(a) = 7
  │       ^^^^^^^

The name `Junk` is not in scope here.

error: Type mismatch
  ┌─ /src/one/two.rakun:6:7
  │
6 │   let Ok(b) = 1
  │       ^^^^^

Expected type:

    Int

Found type:

    Result(a, b)

error: Unknown variable
  ┌─ /src/one/two.rakun:7:11
  │
7 │   let c = a + b
  │           ^ Did you mean `b`?

The name `a` is not in scope here.
