compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__functions__multiple_bad_statement_expression_fault_tolerance.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "\npub fn main() {\n  1 + 2.0\n  3 + 4.0\n  let c = 1 + 2\n}\n"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:3:7
  │
3 │   1 + 2.0
  │       ^^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: the +. operator can be used with Floats


error: Type mismatch
  ┌─ /src/one/two.rakun:4:7
  │
4 │   3 + 4.0
  │       ^^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: the +. operator can be used with Floats
