compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__functions__unlabelled_after_labelled_external.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "\n@external(erlang, \"\", \"\")\nfn main(wibble x: Int, y: Int) -> Int\n"
---
----- SOURCE CODE

@external(erlang, "", "")
fn main(wibble x: Int, y: Int) -> Int


----- ERROR
error: Unlabelled argument after labelled argument
  ┌─ /src/one/two.rakun:3:24
  │
3 │ fn main(wibble x: Int, y: Int) -> Int
  │                        ^^^^^^

All unlabelled arguments must come before any labelled arguments.
